--- a/cargo-dylint/Cargo.toml
+++ b/cargo-dylint/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = { workspace = true }
 similar-asserts = { workspace = true }
 tempfile = { workspace = true }
 walkdir = { workspace = true }
+rand = "0.8"
 
 dylint_internal = { version = "=4.1.0", path = "../internal", features = [
     "examples",
